--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <title>Puppy Trainer</title>
     <link rel="stylesheet" href="index.css">
-    <script defer src="index.js"></script>
+    <script type="module" src="index.js"></script>
 </head>
 <body>
 
 <form action="#">
 
     <div class="save save0">
-        <label><input name="you" type="text" maxlength="6" value="もも"> Your name</label>
-        <label><input name="dog" type="text" maxlength="6" value="バク"> Dog's name</label>
+        <label><input class="you" type="text" maxlength="4" value="もも"> Your name</label>
+        <label><input class="dog" type="text" maxlength="4" value="バク"> Dog's name</label>
     </div>
     <div class="save save1">
-        <label><input name="you" type="text" maxlength="6" value="もも"> Your name</label>
-        <label><input name="dog" type="text" maxlength="6" value="バク"> Dog's name</label>
+        <label><input class="you" type="text" maxlength="4" value="もも"> Your name</label>
+        <label><input class="dog" type="text" maxlength="4" value="バク"> Dog's name</label>
     </div>
     <div class="save save2">
-        <label><input name="you" type="text" maxlength="6" value="もも"> Your name</label>
-        <label><input name="dog" type="text" maxlength="6" value="バク"> Dog's name</label>
+        <label><input class="you" type="text" maxlength="4" value="もも"> Your name</label>
+        <label><input class="dog" type="text" maxlength="4" value="バク"> Dog's name</label>
     </div>
 
     <input id="go" type="submit">
