--- a/src/index.html
+++ b/src/index.html
@@ -8,22 +8,28 @@
 </head>
 <body>
 
+<h1>Puppy Trainer</h1>
+<p class="description">A save trainer for Wanwan Aijou Monogatari. Gives you cleared saves with names of your choosing, 4 characters max.</p>
+
 <form action="#">
 
     <div class="save save0">
+        <h2>Save Slot 1</h2>
         <label><input class="you" type="text" maxlength="4" value="もも"> Your name</label>
         <label><input class="dog" type="text" maxlength="4" value="バク"> Dog's name</label>
     </div>
     <div class="save save1">
+        <h2>Save Slot 2</h2>
         <label><input class="you" type="text" maxlength="4" value="もも"> Your name</label>
         <label><input class="dog" type="text" maxlength="4" value="バク"> Dog's name</label>
     </div>
     <div class="save save2">
+        <h2>Save Slot 3</h2>
         <label><input class="you" type="text" maxlength="4" value="もも"> Your name</label>
         <label><input class="dog" type="text" maxlength="4" value="バク"> Dog's name</label>
     </div>
 
-    <input id="go" type="submit">
+    <input id="go" type="submit" value="Generate SAV">
 </form>
 
 </body>
